fix tools nav on mobile

--- a/client/app/assets/styles/tool-section.scss
+++ b/client/app/assets/styles/tool-section.scss
@@ -300,9 +300,19 @@ $tool-grey: #f8f9f9;
 }
 
 .tool-animation-section {
+    padding: 32px 15px 40px;
     .tool-animation {
-        margin: auto;
-        padding: 32px 15px 40px;
+        margin: 0 auto;
+        border-radius: 12px;
+        max-width: 405px;
+        border-radius: 12px;
+        -webkit-box-shadow: 0px 10px 15px 5px rgba(0,0,0,0.2);
+        -moz-box-shadow: 0px 10px 15px 5px rgba(0,0,0,0.2);
+        box-shadow: 0px 10px 15px 5px rgba(0,0,0,0.2);
+
+        @media only screen and (max-width : 435px) {
+          max-width: calc(100% - 30px);
+        }
     }
 }
 
